--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <div id="fps"></div>
-        <div id="bg_glow"></div>
-        <div id="overlay"></div>
-        <canvas id="canvas"></canvas>
-
+        <div id="scene">
+            <div id="bg_glow"></div>
+            <div id="overlay"></div>
+            <canvas id="canvas"></canvas>
+        </div>
 
         <script src="script.js"></script>
     </body>
