--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
             <div id="overlay"></div>
             <canvas id="canvas"></canvas>
         </div>
-
-        <script src="script.js"></script>
+        <div id="info">
+            <h1>I am <a href="https://github.com/techpixel/">techpixel</a></h1>
+            <h2>Check out my projects:</h2>
+            <p><a href="https://github.com/techpixel/replcraft-jarci">Jarci</a></p>
+            <p><a href="https://github.com/techpixel/Zala">Zala</a> [Archived]</p>
+            <p>This Website!</p>
+            
+        </div>        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="script.js"></script>
     </body>
 </html>
