--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <h2>Check out my projects:</h2>
             <p><a href="https://github.com/techpixel/replcraft-jarci">Jarci</a></p>
             <p><a href="https://github.com/techpixel/Zala">Zala</a> [Archived]</p>
+            <p><a href="            https://github.com/techpixel/homebridge-repl
+">homebridge-repl</a></p>
             <p>This Website!</p>
             
         </div>        
